[gd_scene load_steps=2 format=3 uid="uid://bgjh18ea6uprx"]

[ext_resource type="Script" uid="uid://cijihpln426nv" path="res://QuizGame/QuizLobby.gd" id="1_ptji1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ptji1")
ClientQuizScreen = "uid://c4cse2wyhndtg"

[node name="UserLineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -15.5
offset_right = 125.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "[User Name]"
alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 28.0
offset_right = 125.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "[Password]"
alignment = 1
secret = true

[node name="Login" type="Button" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 66.0
offset_right = 75.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
text = "Login"

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 54.0
offset_bottom = 23.0
text = "CLIENT"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -348.0
offset_right = 125.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = 23.0
text = "Players in the match:"

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -14.0
offset_right = 128.0
offset_bottom = 17.0
text = "[START MATCH]"
